Implemented function declarations, added support for function definitions and calls, and improved code generation and parsing.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,7 @@
     "*.tcc": "c",
     "type_traits": "c",
     "cmath": "c",
-    "stdio.h": "c"
+    "stdio.h": "c",
+    "typeinfo": "c"
   }
 }
