--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,6 +74,7 @@
     "cmath": "c",
     "stdio.h": "c",
     "typeinfo": "c",
-    "stdint.h": "c"
+    "stdint.h": "c",
+    "preprocessor.h": "c"
   }
 }
