--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,7 @@
     "stdio.h": "c",
     "typeinfo": "c",
     "stdint.h": "c",
-    "preprocessor.h": "c"
+    "preprocessor.h": "c",
+    "stdbool.h": "c"
   }
 }
